# ml-backend

./: Dockerfile  pyproject.toml
.github/: renovate.json
.github/workflows/: release.yaml
walletwatch_ml_backend/: main.py
walletwatch_ml_backend/application/: predict.py
walletwatch_ml_backend/domain/entities/: limit_features.py  personality_features.py
walletwatch_ml_backend/domain/repositories/: limit_repository_abc.py  personality_repository_abc.py
walletwatch_ml_backend/infrastructure/repositories/: limit_repository.py  personality_repository.py
walletwatch_ml_backend/infrastructure/resources/: limit.onnx  personality-encoder.npy  personality.onnx
