[tool.poetry]
name = "walletwatch-ml-backend"
version = "0.1.0"
description = ""
authors = [
  "Azis Rosyid <azisrosyid321@gmail.com>",
  "Muhammad Naufal <me@falkia34.dev>",
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.3"
runpod = "1.7.9"
numpy = "1.26.4"
scikit-learn = "1.6.1"
onnxruntime = "1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
